--- a/themes/demo/partials/showrooms.htm
+++ b/themes/demo/partials/showrooms.htm
@@ -1,27 +1,55 @@
-<div class="sidebar-showrooms">
-	<h2 class="schauraum">SCHAURÄUME:</h2>
-	<p style="text-align: right;"><br>
-		<a class="filiale" href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#flagshipstore" target="_blank"><strong>ZENTRALE</strong> <span class="icon-external-link"></span></a><br>
-		1070 Wien, Neubaugasse 15<br> <strong>T: +43 (0)1 715 51 52 - 0</strong><br><br>
-		<a class="filiale"
-		   href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#wien" target="_blank"
-			title="Kontaktdetails"><strong>FILIALE</strong> <span class="icon-external-link"></span></a><br>1030 Wien, Weyrgasse
-		7<br><strong>T.: +43 (0)1 715 51 52 - 331</strong><br><br>
-		<a href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#gerasdorf" target="_blank"
-			title="Anfahrtsbeschreibung zum Parkett-Schauraum in Gerasdorf"><strong>LAGERVERKAUF
-				NORD</strong> <span class="icon-external-link"></span></a><br> Nähe Shopping Center
-		<br>
-		2201 Gerasdorf, Brünnerstr. 115-119<br> <strong>T: +43 (0)1 715 51 52 - 611<br>
-		</strong><br> <a class="filiale"
-		                 href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#wrneustadt" target="_blank"
-		                 title="Kontaktdetails Würflach"><strong>LAGERVERKAUF
-				SÜD</strong> <span class="icon-external-link"></span></a><br>Wiener Neustadt<br>2732 Würflach, Heuweg 203<br> <strong>T:
-			+43 (0) 699 123 78 488<br>+43 (0) 699 123 78 410</strong> <br><br>
-		<a
-			href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#graz" target="_blank"><strong>FILIALE</strong>
-			<span class="icon-external-link"></span></a><br>8054 Graz, Weblinger
-		Gürtel 33<br><em>im Musterhauspark</em><br><br><a
-			href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#grosshandelwien" target="_blank"
-			title="Kontaktdetails Großhandel"><strong>GROSSHANDEL</strong> <span class="icon-external-link"></span></a><br>1070 Wien,
-		Lindengasse 38<br><strong>T: +43 (0)1 715 51 52 - 271</strong></p>
-	<p>&nbsp;</p></div>
+<div class="showrooms">
+
+	<div class="row">
+		<div class="col-sm-2">
+			<a class="filiale" href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#flagshipstore" target="_blank">
+				ZENTRALE <span class="icon-external-link"></span></a><br>
+				Neubaugasse 15<br>
+				1070 Wien<br>
+				T: +43 1 715 51 52 - 0
+		</div>
+		<div class="col-sm-2">
+			<a class="filiale" href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#wien" target="_blank">
+			   FILIALE <span class="icon-external-link"></span></a><br>
+			Weyrgasse 7<br>
+			1030 Wien<br>
+			T: +43 1 715 51 52 - 331
+		</div>
+		<div class="col-sm-2">
+			<a href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#gerasdorf" target="_blank"
+			   title="Anfahrtsbeschreibung zum Parkett-Schauraum in Gerasdorf">
+				FILIALE <span class="icon-external-link"></span></a><br>
+			Brünnerstr. 115-119<br>
+			2201 Gerasdorf<br>
+			<em>Nähe Shopping Center G3</em><br>
+			T: +43 1 715 51 52 - 611
+		</div>
+		<div class="col-sm-2">
+			<a href="http://www.wohngesund.at/filialen/wohngesund-v%C3%B6sendorf-scs-filiale-schauraum.html" target="_blank"
+			   title="Anfahrtsbeschreibung zum Parkett-Schauraum in der SCS Vösendorf">
+				FILIALE <span class="icon-external-link"></span></a><br>
+			Shopping City Süd, Eing. 3<br>
+			2334 Vösendorf Süd<br>
+			<em>vis a vis Ikea Restaurant</em><br>
+			T: +43 1 715 51 52 - 700
+		</div>
+		<div class="col-sm-2">
+			<a class="filiale" href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#wrneustadt" target="_blank"
+			   title="Kontaktdetails Würflach">LAGERVERKAUF <span class="icon-external-link"></span></a><br>
+			Heuweg 203<br>
+			2732 Würflach<br>
+			<em>nähe Wiener Neustadt</em><br>
+			T: +43 699 123 78 488<br>
+			+43 699 123 78 410
+		</div>
+		<div class="col-sm-2">
+			<a href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html#graz" target="_blank">FILIALE
+			<span class="icon-external-link"></span></a><br>
+			Weblinger Gürtel 33<br>
+			8054 Graz<br>
+			<em>im Musterhauspark</em><br>
+			T: +43 699 123 78 493
+		</div>
+	</div>
+
+</div>
