--- a/themes/demo/partials/footer.htm
+++ b/themes/demo/partials/footer.htm
@@ -1,15 +1,15 @@
 <div id="footer">
 	<div class="container text-center">
 		<hr/>
-		<div class="moduletable">
+		<div>
 			<p>© 2012 - 2016 Wohngesund International Parkett- und Holzdielen GmbH | Neubaugasse 15, 1070 Wien</p></div>
 
-		<div class="moduletable-footer">
+		<div>
 			<ul class="menu-footer list-inline">
-				<li><a href="/impressum.html"><span>Impressum</span></a></li>
-				<li><a href="http://www.wohngesund.at/kontakt"><span>Kontakt</span></a></li>
-				<li><a href="http://www.wohngesund.at/unternehmen/agb.html"><span>AGB</span></a></li>
-				<li><a href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html" target="_blank"><span>Anfahrtsplan</span></a></li>
+				<li><a href="http://www.wohngesund.at/impressum.html" target="_blank"><span>Impressum</span> <span class="icon-external-link"></span></a></li>
+				<li><a href="http://www.wohngesund.at/kontakt" target="_blank"><span>Kontakt</span> <span class="icon-external-link"></span></a></li>
+				<li><a href="http://www.wohngesund.at/unternehmen/agb.html" target="_blank"><span>AGB</span> <span class="icon-external-link"></span></a></li>
+				<li><a href="http://www.wohngesund.at/kontakt/anfahrtsbeschreibung.html" target="_blank"><span>Anfahrtsplan</span> <span class="icon-external-link"></span></a></li>
 			</ul>
 		</div>
 		<br>
