--- a/themes/demo/assets/css/wohngesund.css
+++ b/themes/demo/assets/css/wohngesund.css
@@ -239,4 +239,16 @@ h1.title {
     color: #257576;
 }
 
+.btn-success {
+    color: #ffffff;
+    background-color: #257576;
+    border-color: #2c8b8c;
+}
+
+.btn-success:hover, .btn-success:focus, .btn-success.focus, .btn-success:active, .btn-success.active, .open > .dropdown-toggle.btn-success {
+    color: #ffffff;
+    background-color: #2c8b8c;
+    border-color: #36aeaf;
+}
+
 
