--- a/themes/demo/layouts/static-layout.htm
+++ b/themes/demo/layouts/static-layout.htm
@@ -26,12 +26,13 @@ function onInit(){
             'assets/css/wohngesund.css'
         ]|theme }}" rel="stylesheet">
 </head>
-<body>´
+<body>
 
+<div class="container wohngesund-brown">
 <!-- Header -->
 <header id="layout-header">
 
-    <div class="container wohngesund-brown">
+
         <div class="col-sm-12">
             <div class="col-sm-3">
                 <a href="/"><img class="logo" src="{{ 'assets/images/logo_wohngesund.png'|theme }}" /></a>
@@ -40,22 +41,24 @@ function onInit(){
                 <div class="bigger">
                     Landhausdielen von Wohngesund
                 </div>
-                <div>
+                <div class="semi-bigger">
                     Nussbaum-, Eiche-, Country House Landhausdielen direkt vom Generalimporteur
                 </div>
             </div>
 
         </div>
-    </div>
+
 
 </header>
 
 <!-- Content -->
 <section id="layout-content">
-    <div class="container wohngesund-brown">
+
         <div class="row">
             <div class="col-sm-3">
-                <div class="sidebar-nav">
+                <div class="clearfix">
+                    <div class="natur-im-raum"><img src="{{ 'assets/images/natur-im-raum.png'|theme }}"></div>
+                    <div class="sidebar-nav">
                     <div id="MainMenu" class="navbar navbar-default">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
@@ -92,15 +95,16 @@ function onInit(){
                         </div>
                     </div>
                 </div>
-                <div class="leaf"></div>
+                </div>
             </div>
             <div class="col-sm-9">
                 {% page %}
             </div>
         </div>
         {% partial 'showrooms' %}
-    </div>
+
 </section>
+</div>
 
 <!-- Footer -->
 <footer id="layout-footer">
