--- a/themes/demo/assets/css/wohngesund.css
+++ b/themes/demo/assets/css/wohngesund.css
@@ -1,5 +1,6 @@
 body {
     background: #d6c4a5 url('../images/bg-body.jpg') top left no-repeat;
+    padding-top: 20px;
 }
 
 body section#layout-content .col-sm-9 {
@@ -9,7 +10,13 @@ body section#layout-content .col-sm-9 {
 }
 
 .container.wohngesund-brown{
-    background: #543928;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#29180e+0,543928+24,543928+100 */
+    background: #543928; /* Old browsers */
+    background: -moz-linear-gradient(top,  #29180e 0%, #543928 24%, #543928 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #29180e 0%,#543928 24%,#543928 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #29180e 0%,#543928 24%,#543928 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#29180e', endColorstr='#543928',GradientType=0 ); /* IE6-9 */
+
     color: whitesmoke;
     padding-bottom: 10px;
     padding-top: 20px;
@@ -61,6 +68,7 @@ body section#layout-content .col-sm-9 {
     }
     .sidebar-nav {
         color: #0d0d0d;
+        float: left;
     }
     .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
         background-color: #755c4a;
@@ -91,6 +99,13 @@ body section#layout-content .col-sm-9 {
 .bigger{
     font-size: 300%;
     text-transform: uppercase;
+    line-height: 1;
+    opacity: 0.3;
+}
+
+.semi-bigger{
+    font-size: 164%;
+    font-weight: 100;
 }
 
 a {
@@ -184,20 +199,23 @@ h1.title {
     line-height: 40px;
 }
 
-.leaf {
+/*.leaf {
     background: url("../images/blatt-logo-wohngesund.png");
     background-size: contain;
-    background-position: bottom;
+    background-position: bottom left;
     background-repeat: no-repeat;
-    height: 280px;
+    height: 50px;
+    width: 100%;
     opacity: 0.2;
+    float: left;
+    margin-left: 22px;
 }
 
 @media (max-width: 768px) {
     .leaf{
         display: none;
     }
-}
+}*/
 
 .orange {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f18430+0,f2b818+100 */
@@ -250,5 +268,31 @@ h1.title {
     background-color: #2c8b8c;
     border-color: #36aeaf;
 }
+
+.natur-im-raum {
+    width: 66px;
+    float: left;
+    margin-top: 13px;
+    opacity: 0.2;
+}
+
+@media (max-width: 768px){
+    .natur-im-raum{
+        display: none;
+    }
+}
+
+.natur-im-raum img{
+    width: 45px;
+    padding-left: 15px;
+}
+img.logo{
+    padding-left: 36px;
+}
+
+img{
+    max-width:100%;
+}
+
 
 
